# Scheduler

./: .gitignore  .last_schedule_import  .roster_reset_epoch  DEAD_CODE.md  PIPELINE.md  README.md  SIMPLIFICATION_AUDIT.md  breakroom_schedule_preview.html  debug_run.txt  demo.sqlite3.bak-20260529T190404  demo.sqlite3.corrupt-20260613T041248Z  pyproject.toml  run_app.ps1  run_manager_app.ps1
deploy/: DEPLOY.md  landing.html
docs/: BUSINESS_CODEBASE_AUDIT.md  BUSINESS_PRODUCTION_VERDICT.md  BUSINESS_SECTION_DESIGN.md  CURSOR_SDK.md  FINISH_APP_ITERATIONS.md  FIRST_TOUCH_PSYCHOLOGY_BRIEF.md  ONE_STOP_SHOP_VISION.md  REVENUE_2000_PLAN.md  ROTATION.md  ROTATION_HANDOFF.md  SUBAGENT_ROSTER_AUDIT.md  publish_bundle_2026-06-19.md
exports/: Agency_Email_Draft_2026-05-28.txt  Agency_Request_2026-05-28.json  Conflict_Report_2026-05-28.json  Conflict_Report_2026-05-29.json  Conflict_Report_2026-05-30.json  Conflict_Report_2026-05-31.json  Conflict_Report_2026-06-02.json  Conflict_Report_2026-06-03.json  Conflict_Report_2026-06-04.json  Conflict_Report_2026-06-05.json  Conflict_Report_2026-06-08.json  Conflict_Report_2026-06-10.json  Conflict_Report_2026-06-11.json  Conflict_Report_2026-06-12.json  Conflict_Report_2026-06-19.json  Schedule_Export_2026-05-28.json  Schedule_Export_2026-05-29.json  Schedule_Export_2026-05-30.json  Schedule_Export_2026-06-02.json  Schedule_Export_2026-06-03.json  Triage_Escalation_2026-05-28.json  Triage_Escalation_2026-05-29.json  Triage_Escalation_2026-05-30.json  breakroom_open_shift_preview.html  breakroom_schedule_2026-05-28.html  (+10 more)
(+395 files in other folders)
